# PySnap

./: README.md  pyproject.toml
examples/: chat_completions_pipeline.py  chat_completions_pipeline_example.py  condition_snap_example.py  router_pipeline_example.py  simple_pipeline.py  simple_pipeline_example.py  tool_call_pipeline_auto_example.py  tool_call_pipeline_example.py
examples/snaps/: any_generator_snap.py  copy_snap.py  router_snap.py  text_generator_snap.py  text_length_snap.py  text_uppercase_snap.py
examples/snaps/openai/: chat_completions.py  tool_calling.py  tool_calling_auto_run_tools.py  tool_calls.py
src/pysnap/core/: pipeline.py  snap.py  snapexecutionwrapper.py  views.py
